--- a/care landing page.html
+++ b/care landing page.html
@@ -45,8 +45,8 @@
 					<!-- Logo
 					============================================= -->
 					<div id="logo">
-						<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo.png" alt="Canvas Logo"></a>
-						<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logo@2x.png" alt="Canvas Logo"></a>
+						<a href="index.html" class="standard-logo" data-dark-logo="images/logo-dark.png"><img src="images/logocare.png" alt="Care Logo"></a>
+						<a href="index.html" class="retina-logo" data-dark-logo="images/logo-dark@2x.png"><img src="images/logocare@2x.png" alt="Care Logo"></a>
 					</div><!-- #logo end -->
 
 					<!-- Primary Navigation
@@ -59,49 +59,11 @@
 									<li><a href="index-onepage.html"><div>Home - One Page</div></a>
 										<ul>
 											<li><a href="index-onepage.html"><div>One Page - Default</div></a></li>
-											<li><a href="index-onepage-2.html"><div>One Page - Submenu</div></a></li>
-											<li><a href="index-onepage-3.html"><div>One Page - Dots Style</div></a></li>
 										</ul>
 									</li>
-									<li><a href="index-wedding.html"><div>Home - Wedding</div></a></li>
 								</ul>
 							</li>
-							<li class="mega-menu"><a href="#"><div>Pages</div></a>
-								<div class="mega-menu-content style-2 clearfix">
-									<ul class="mega-menu-column col-lg-12">
-										<li class="mega-menu-title"><a href="#"><div>Introduction</div></a>
-											<ul>
-												<li><a href="about.html"><div>About Us</div></a></li>
-												<li><a href="about-2.html"><div>About Us - Layout 2</div></a></li>
-												<li><a href="about-me.html"><div>About Me</div></a></li>
-												<li><a href="team.html"><div>Team Members</div></a></li>
-												<li><a href="jobs.html"><div>Careers</div></a></li>
-												<li><a href="side-navigation.html"><div>Side Navigation</div></a></li>
-												<li><a href="page-submenu.html"><div>Page Submenu</div></a></li>
-												<li><a href="sitemap.html"><div>Sitemap</div></a></li>
-											</ul>
-										</li>
-									</ul>
-								</div>
-							</li>
-							<li class="mega-menu"><a href="#"><div>Shortcodes</div></a>
-								<div class="mega-menu-content clearfix">
-									<ul class="mega-menu-column col-5">
-										<li><a href="animations.html"><div><i class="icon-magic"></i>Animations</div></a></li>
-										<li><a href="buttons.html"><div><i class="icon-link"></i>Buttons</div></a></li>
-										<li><a href="carousel.html"><div><i class="icon-heart3"></i>Carousel</div></a></li>
-										<li><a href="charts.html"><div><i class="icon-bar-chart"></i>Charts</div></a></li>
-										<li><a href="clients.html"><div><i class="icon-apple"></i>Clients</div></a></li>
-										<li><a href="columns-grids.html"><div><i class="icon-th-large"></i>Columns</div></a></li>
-										<li><a href="counters.html"><div><i class="icon-time"></i>Counters</div></a></li>
-										<li><a href="component-datatable.html"><div><i class="icon-table"></i>Data Tables</div></a></li>
-										<li><a href="component-datepicker.html"><div><i class="icon-calendar3"></i>Date &amp; Time Pickers</div></a></li>
-									</ul>
-								</div>
-							</li>
 						</ul>
-
-
 						<!-- Top Search
 						============================================= -->
 						<div id="top-search">
@@ -125,19 +87,20 @@
 
 				<div class="swiper-container swiper-parent">
 					<div class="swiper-wrapper">
-						<div class="swiper-slide dark" style="background-image: url('images/slider/swiper/1.jpg');">
+						<div class="swiper-slide" style="background-image: url('images/slider/swiper/3.jpg'); background-position: center top;">
 							<div class="container clearfix">
-								<div class="slider-caption slider-caption-center">
-									<h2 data-animate="fadeInUp">CARE</h2>
-									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Un proyecto del programa a US. CHANGEMAKERS MAMAHUEVOS</p>
+								<div class="slider-caption">
+									<h2 data-animate="fadeInUp">Care</h2>
+									<h3 class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200"> Un proyecto del programa a US. Changemakers. </h3>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200"> Consejos para madres y padres de familia a un click de distancia. </p>
 								</div>
 							</div>
 						</div>
 						<div class="swiper-slide dark">
 							<div class="container clearfix">
 								<div class="slider-caption slider-caption-center">
-									<h2 data-animate="fadeInUp">Beautifully Flexible</h2>
-									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Powerful Layout with Responsive functionality that can be adapted to any screen size.</p>
+									<h2 data-animate="fadeInUp">Consejos para madres y padres de familia</h2>
+									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Doctores expertos en el área </p>
 								</div>
 							</div>
 							<div class="video-wrap">
@@ -145,15 +108,7 @@
 									<source src='images/videos/explore.mp4' type='video/mp4' />
 									<source src='images/videos/explore.webm' type='video/webm' />
 								</video>
-								<div class="video-overlay" style="background-color: rgba(0,0,0,0.55);"></div>
-							</div>
-						</div>
-						<div class="swiper-slide" style="background-image: url('images/slider/swiper/3.jpg'); background-position: center top;">
-							<div class="container clearfix">
-								<div class="slider-caption">
-									<h2 data-animate="fadeInUp">Great Performance</h2>
-									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">You'll be surprised to see the Final Results of your Creation &amp; would crave for more.</p>
-								</div>
+								<div class="video-overlay" style="background-color: rgba(107,201,204, 0.35);"></div>
 							</div>
 						</div>
 					</div>
@@ -211,9 +166,8 @@
 
 						<div class="heading-block center">
 							<h2>Somos <span>Care</span></h2>
-							<span>One of the most Versatile Theme on Themeforest</span>
+							<span>Tus consejeros médicos al alcance de tu mano</span>
 						</div>
-
 						<div class="col_one_third nobottommargin">
 							<div class="feature-box media-box">
 								<div class="fbox-media">
@@ -260,8 +214,8 @@
 
 							<div class="col_one_fourth nobottommargin center" data-animate="bounceIn">
 								<i class="i-plain i-xlarge divcenter nobottommargin icon-code"></i>
-								<div class="counter counter-lined"><span data-from="100" data-to="846" data-refresh-interval="50" data-speed="2000"></span>K+</div>
-								<h5>Lines of Codes</h5>
+								<div class="counter counter-lined"><span data-from="1" data-to="49" data-refresh-interval="50" data-speed="2000"></span>k+</div>
+								<h5>Consejos realizados</h5>
 							</div>
 
 							<div class="col_one_fourth nobottommargin center" data-animate="bounceIn" data-delay="200">
@@ -509,40 +463,6 @@
 								<p>Complete control on each &amp; every element that provides endless customization possibilities.</p>
 							</div>
 						</div>
-
-						<div class="clear"></div>
-
-						<div class="col_one_third nobottommargin">
-							<div class="feature-box fbox-center fbox-effect nobottomborder" data-animate="fadeIn" data-delay="1200">
-								<div class="fbox-icon">
-									<a href="#"><i class="icon-bulb"></i></a>
-								</div>
-								<h3>Light &amp; Dark Color Schemes</h3>
-								<p>Change your Website's Primary Scheme instantly by simply adding the dark class to the body.</p>
-							</div>
-						</div>
-
-						<div class="col_one_third nobottommargin">
-							<div class="feature-box fbox-center fbox-effect nobottomborder" data-animate="fadeIn" data-delay="1400">
-								<div class="fbox-icon">
-									<a href="#"><i class="icon-heart2"></i></a>
-								</div>
-								<h3>Boxed &amp; Wide Layouts</h3>
-								<p>Stretch your Website to the Full Width or make it boxed to surprise your visitors.</p>
-							</div>
-						</div>
-
-						<div class="col_one_third nobottommargin col_last">
-							<div class="feature-box fbox-center fbox-effect nobottomborder" data-animate="fadeIn" data-delay="1600">
-								<div class="fbox-icon">
-									<a href="#"><i class="icon-note"></i></a>
-								</div>
-								<h3>Extensive Documentation</h3>
-								<p>We have covered each &amp; everything in our Documentation including Videos &amp; Screenshots.</p>
-							</div>
-						</div>
-
-						<div class="clear"></div>
 
 					</div>
 
@@ -1005,7 +925,7 @@
 					icon: {
 						image: "images/icons/map-icon-red.png",
 						iconsize: [32, 39],
-						iconanchor: [32,39]
+						iconanchor: [32,39] d
 					}
 				}
 			],
