--- a/index.html
+++ b/index.html
@@ -108,21 +108,6 @@
 								</div>
 							</div>
 						</div>
-						<div class="swiper-slide dark">
-							<div class="container clearfix">
-								<div class="slider-caption slider-caption-center">
-									<h2 data-animate="fadeInUp">Consejos para madres y padres de familia</h2>
-									<p class="d-none d-sm-block" data-animate="fadeInUp" data-delay="200">Doctores expertos en el área </p>
-								</div>
-							</div>
-							<div class="video-wrap">
-								<video poster="images/videos/explore.jpg" preload="auto" loop autoplay muted>
-									<source src='images/videos/explore.mp4' type='video/mp4' />
-									<source src='images/videos/explore.webm' type='video/webm' />
-								</video>
-								<div class="video-overlay" style="background-color: rgba(107,201,204, 0.35);"></div>
-							</div>
-						</div>
 					</div>
 					<div class="slider-arrow-left"><i class="icon-angle-left"></i></div>
 					<div class="slider-arrow-right"><i class="icon-angle-right"></i></div>
@@ -319,7 +304,7 @@
 							<div class="col_one_third">
 								<div class="feature-box fbox-center fbox-effect nobottomborder" data-animate="fadeIn">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-phone2"></i></a>
+										<a href="https://diozen.typeform.com/to/dIh50O"><i class="icon-phone2"></i></a>
 									</div>
 									<h3>Durante el embarazo</h3>
 									<p>Conocer que alimentos ingerir durante el embarazo asegura la salud de tu bebé.</p>
@@ -329,7 +314,7 @@
 							<div class="col_one_third">
 								<div class="feature-box fbox-center fbox-effect nobottomborder" data-animate="fadeIn" data-delay="200">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-eye"></i></a>
+										<a href="https://diozen.typeform.com/to/dIh50O><i class="icon-eye"></i></a>
 									</div>
 									<h3>Después del parto</h3>
 									<p>Los mejores cuidados y consejos para cuidar a tu pequeño.</p>
@@ -365,14 +350,20 @@
 						<span>¿Quisieras que trabajemos algún tema específico? Llena esta formulario.</span>
 					</div>
 
+					<div class="col_full">
+						<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">SUSCR´
+							<a href="https://diozen.typeform.com/to/dIh50O">
+						</button>
+					</div>
+
 					<div class="container clearfix">
 
 						<!-- Contact Form
 						============================================= -->
-						<div class="col_half">
+						<!--<div class="col_half">
 
 							<div class="fancy-title title-dotted-border">
-								<h3>Envíanos un correo</h3>
+								<h3>Suscríbete a nuestro feed</h3>
 							</div>
 
 							<div class="form-widget">
@@ -432,7 +423,7 @@
 
 								<input type="hidden" name="prefix" value="template-contactform-">
 
-							</form>
+							</form>=== -->
 
 						</div>
 
