--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html dir="ltr" lang="en-US">
 <head>
 
@@ -53,14 +53,14 @@
 					<nav id="primary-menu">
 
 						<ul>
-							<li class="current"><a href="index.html"><div>Home</div></a>
+							<!--<li class="current"><a href="index.html"><div>Home</div></a>
 
-							</li>
+							</li>-->
 						</ul>
 
 
 						<ul>
-								<li class="current"><a href="index.html"><div>Blog</div></a>
+								<!--<li class="current"><a href="index.html"><div>Blog</div></a>
 									<ul>
 										<li><a href="index-onepage.html"><div>Home - One Page</div></a>
 											<ul>
@@ -70,7 +70,7 @@
 											</ul>
 										</li>
 									</ul>
-								</li>
+								</li>-->
 							</ul>
 
 						</ul>
@@ -136,10 +136,10 @@
 							<li><a href="#" data-href="#header"><div>Nuestra portada</div></a></li>
 							<li><a href="#" data-href="#section-about"><div>Sobre nosotros</div></a></li>
 							<li><a href="#" data-href="#section-team"><div>Nuestro equipo</div></a></li>
-							<li><a href="#" data-href="#section-services"><div>Nuestros consejos</div></a></li>
-							<li><a href="#" data-href="#section-testimonials" class="no-offset"><div>Testimonios</div></a></li>
-							<li><a href="#" data-href="#section-contact"><div>Contacto</div></a></li>
-							<li><a href="blog.html"><div>Blog</div></a></li>
+							<!--<li><a href="#" data-href="#section-services"><div>Nuestros consejos</div></a></li>
+							<li><a href="#" data-href="#section-testimonials" class="no-offset"><div>Testimonios</div></a></li>-->
+							<li><a href="#" data-href="#section-contact"><div>Suscríbete</div></a></li>
+							<!--<li><a href="blog.html"><div>Blog</div></a></li>-->
 						</ul>
 					</nav>
 
@@ -209,7 +209,7 @@
 
 						<div class="container clearfix">
 
-							<div class="col_one_fourth nobottommargin center" data-animate="bounceIn">
+							<!--<div class="col_one_fourth nobottommargin center" data-animate="bounceIn">
 								<i class="i-plain i-xlarge divcenter nobottommargin icon-smile-wink"></i>
 								<div class="counter counter-lined"><span data-from="1" data-to="100" data-refresh-interval="50" data-speed="2000"></span>+</div>
 								<h5>Niños Felices</h5>
@@ -220,7 +220,7 @@
 								<i class="i-plain i-xlarge divcenter nobottommargin icon-clock"></i>
 								<div class="counter counter-lined"><span data-from="1" data-to="24" data-refresh-interval="30" data-speed="2700"></span>+</div>
 								<h5>Horas disponibles al día</h5>
-							</div>
+							</div>-->
 
 						</div>
 
@@ -346,15 +346,14 @@
 		<section id="section-contact" class="page-section">
 
 					<div class="heading-block title-center">
-						<h2>Contáctanos</h2>
-						<span>¿Quisieras que trabajemos algún tema específico? Llena esta formulario.</span>
+						<h2>Suscríbete Para Recibir Nuestro Boletín</h2>
+						
 					</div>
 
-					<div class="col_full">
-						<button class="button button-3d nomargin" type="submit" id="template-contactform-submit" name="template-contactform-submit" value="submit">SUSCR´
-							<a href="https://diozen.typeform.com/to/dIh50O">
-						</button>
-					</div>
+                    <div class="col_full">
+                        <div class="typeform-widget" data-url="https://diozen.typeform.com/to/dIh50O" style="width: 100%; height: 500px;"></div>
+                        <script>(function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })()</script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=dIh50O&utm_source=typeform.com-01D8JX4ME5WQQZK8SA1X2XC613-essentials&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
+                    </div>
 
 					<div class="container clearfix">
 
@@ -461,10 +460,10 @@
 					<h4>Este proyecto es posible gracias al apoyo de:</h4>
 				</div>
 
-						<ul class="clients-grid grid-3 nobottommargin clearfix">
+						<ul class="clients-grid grid-2 nobottommargin clearfix">
 							<li><a href="#"><img src="images/clients/1.png" alt="Clients"></a></li>
 							<li><a href="#"><img src="images/clients/2.png" alt="Clients"></a></li>
-							<li><a href="#"><img src="images/clients/3.png" alt="Clients"></a></li>
+							<!--<li><a href="#"><img src="images/clients/3.png" alt="Clients"></a></li>-->
 						</ul>
 
 			</div>
@@ -508,68 +507,7 @@
 				</div>
 
 
-			<!-- Copyrights
-			============================================= -->
-			<div id="copyrights">
-
-				<div class="container clearfix">
-
-					<div class="col_half">
-						Copyrights &copy; 2019 All Rights Reserved by Care.<br>
-						<div class="copyright-links"><a href="#">Términos de uso</a> / <a href="#">Política de privacidad</a></div>
-					</div>
-
-					<div class="col_half col_last tright">
-						<div class="fright clearfix">
-							<a href="#" class="social-icon si-small si-borderless si-facebook">
-								<i class="icon-facebook"></i>
-								<i class="icon-facebook"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-twitter">
-								<i class="icon-twitter"></i>
-								<i class="icon-twitter"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-gplus">
-								<i class="icon-gplus"></i>
-								<i class="icon-gplus"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-pinterest">
-								<i class="icon-pinterest"></i>
-								<i class="icon-pinterest"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-vimeo">
-								<i class="icon-vimeo"></i>
-								<i class="icon-vimeo"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-github">
-								<i class="icon-github"></i>
-								<i class="icon-github"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-yahoo">
-								<i class="icon-yahoo"></i>
-								<i class="icon-yahoo"></i>
-							</a>
-
-							<a href="#" class="social-icon si-small si-borderless si-linkedin">
-								<i class="icon-linkedin"></i>
-								<i class="icon-linkedin"></i>
-							</a>
-						</div>
-
-						<div class="clear"></div>
-
-						<i class="icon-envelope2"></i> careusembassy@gmail.com <span class="middot">&middot;</span> 
-					</div>
-
-				</div>
-
-			</div><!-- #copyrights end -->
+		
 
 		</footer><!-- #footer end -->
 
