--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 									<div class="team-desc">
 										<div class="team-title"><h4>Kevin Flores</h4><span>Co-fundador</span></div>
 										<div class="team-content">Estudiante de Arquitectura y Sistemas Administrativos computarizados de la ULVR de Guayaquil.</div>
-										<a href="#" class="social-icon si-rounded si-small si-facebook">
+										<!--<a href="#" class="social-icon si-rounded si-small si-facebook">
 											<i class="icon-facebook"></i>
 											<i class="icon-facebook"></i>
 										</a>
@@ -257,7 +257,7 @@
 										<a href="#" class="social-icon si-rounded si-small si-gplus">
 											<i class="icon-gplus"></i>
 											<i class="icon-gplus"></i>
-										</a>
+										</a>-->
 									</div>
 								</div>
 							</div>
@@ -270,7 +270,7 @@
 									<div class="team-desc">
 										<div class="team-title"><h4>Sofia Benavides</h4><span>Co-fundadora</span></div>
 										<div class="team-content">Psicóloga educativa graduada de la Universidad Técnica del Norte. Le apasiona el servicio comunitario y potenciar las habilidades cognitivas mediante la educación. </div>
-										<a href="#" class="social-icon si-rounded si-small si-forrst">
+										<!--<a href="#" class="social-icon si-rounded si-small si-forrst">
 											<i class="icon-forrst"></i>
 											<i class="icon-forrst"></i>
 										</a>
@@ -281,7 +281,7 @@
 										<a href="#" class="social-icon si-rounded si-small si-flickr">
 											<i class="icon-flickr"></i>
 											<i class="icon-flickr"></i>
-										</a>
+										</a>-->
 									</div>
 								</div>
 							</div>
